--- a/.github/workflows/github-action.demo.yml
+++ b/.github/workflows/github-action.demo.yml
@@ -47,3 +47,9 @@ jobs:
           ls ${{ runner.tool_cache }}
       
       - run: echo "This job's status is ${{ job.status }}."
+  Second-Job:
+    name: THe second job run by another runner
+    runs-on: windows-latest
+    needs: Example-Actions-Job
+    steps:
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
