--- a/.github/workflows/github-action.demo.yml
+++ b/.github/workflows/github-action.demo.yml
@@ -53,3 +53,23 @@ jobs:
     needs: Example-Actions-Job
     steps:
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
+      
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      
+      - name: Setup dotnet on runner
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.x'
+      
+      - name: Display dotnet version
+        run: dotnet --version
+      
+      - run: echo "The preinstalled tools are located here on the runner ${{ runner.tool_cache }}."
+      
+      - name: List files in tool cache
+        run: |
+          ls ${{ runner.tool_cache }}
+      
+      - run: echo "This job's status is ${{ job.status }}."
